# telegram

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  communities.json  compose.yaml  core.ts  default.nix  deps.ts  example.rs  justfile  readme.md  shell.nix
data/: communities.json  roadmap.md  source.json  topics.json
delta/: about.ts  groups.ts  help.ts  inline.ts  latest.ts  mod.ts  playground.ts  run.ts  start.ts  version.ts
src/: lib.rs  main.rs
src/functions/: about.rs  check.rs  groups.rs  help.rs  inline.rs  joined.rs  latest.rs  mod.rs  roadmap.rs  rules.rs  run.rs  start.rs  useful.rs  version.rs  warn.rs
src/hooks/: is_private.rs
src/utils/: github.rs  inlines.rs  keyboard.rs
utils/: checker.ts  playground.ts
