[package]
name = "bot"
description = "Telegram bot manager for Uzbek Rust community"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/rust-lang-uz/telegram"
repository = "https://github.com/rust-lang-uz/telegram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.15", features = [
  "macros",
  "webhooks",
  "webhooks-axum",
] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
crates_io_api = "0.11"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
octocrab = { version = "0.44" }
clap = { version = "4", features = ["derive"] }
orzklv = { version = "0.1.9", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
